--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ header {
   height: 340px;
   max-width: 320px;
   margin: 0 auto;
-  background-image: url("/images/bg-mobile.svg");
+  background-image: url("../images/bg-mobile.svg");
   background-repeat: no-repeat;
   background-size: contain;
 }
