--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,17 @@ body {
   font-size: 1.6rem;
   font-family: "Open Sans", sans-serif;
   background-color: var(--primary-color);
-}
-header {
-  width: 100%;
-  height: 340px;
-  max-width: 320px;
-  margin: 0 auto;
   background-image: url("../images/bg-mobile.svg");
   background-repeat: no-repeat;
   background-size: contain;
+  background-attachment: fixed;
+  background-position: top;
+}
+header {
+  width: 100%;
+  height: auto;
+  max-width: 320px;
+  margin: 0 auto;
 }
 
 .header__left {
@@ -35,7 +37,7 @@ header {
   margin-top: 25px;
   margin-left: 5px;
 }
-.header__right {
+.main__image--container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,8 +45,8 @@ header {
   height: auto;
   margin: 0 auto;
 }
-.header__right img {
-  width: 250px;
+.main__image--container img {
+  width: 260px;
   margin-top: 22px;
 }
 main {
@@ -54,7 +56,8 @@ main {
 .main__section {
   text-align: center;
   width: 90%;
-  margin: 0 auto;
+  margin: auto;
+  margin-top: 60px;
 }
 .main__section h2 {
   font-family: "Poppins", sans-serif;
@@ -88,8 +91,6 @@ footer {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-}
-.footer__container {
 }
 .footer__container i {
   color: white;
